--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,6 +23,7 @@ html{
 a{
     text-decoration: none;
 }
+
 /*Full responsive*/
 
 
@@ -100,8 +101,8 @@ a{
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #F0A500;
-    border-top: solid #1B1A17;
+    background: rgb(230,213,184);
+    background: linear-gradient(0deg, rgba(230,213,184,1) 0%, rgba(240,165,0,1) 100%);
     border-width: 3px;
     display: flex;
     justify-content: flex-start;
@@ -248,7 +249,7 @@ a{
 .menu{
     width: 80%;
     background-color: #333;
-    border: dashed #dd8855;
+    border: dashed #F0A500;
     border-width: 8px;
     margin-left: auto;
     margin-right: auto;
@@ -279,8 +280,8 @@ a{
     display: block;
     text-align: center;
     font-size: 30px;
-    color: #dd8855;
-    border: solid #dd8855;
+    color: #F0A500;
+    border: solid #F0A500;
     font-family: anton;
     letter-spacing: 2px;
 }
@@ -290,7 +291,20 @@ a{
     color: #E45826;
     margin-top: 35px;
     margin-bottom: 5px;
+    transition:all .5s ease-in-out;
 }
+.comida__nombre:hover{
+    -webkit-transform:scale(1.3);
+    transform:scale(1.2);
+    color: #F0A500;
+}
+.comida__nombre--alt{
+    font-family: lobster;
+    color: #E45826;
+    margin-top: 35px;
+    margin-bottom: 5px;
+}
+
 
 .comida__descripcion{
     display: inline;
@@ -302,13 +316,18 @@ a{
 
 .comida__imagen{
     margin-left: 8px;
+    transition:all .5s ease-in-out;
+}
+.comida__imagen:hover{
+    -webkit-transform:scale(1.3);
+    transform:scale(1.2);
 }
 
 .reservar{
     display: block;
     background-color: #333;
     border-radius: 10px;
-    color: #dd8855;
+    color: #E45826;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
@@ -318,6 +337,12 @@ a{
     font-size: 60px;
     font-family: anton;
     letter-spacing: 2px;
+    transition:all .5s ease-in-out;
+}
+.reservar:hover{
+    -webkit-transform:scale(1.3);
+    transform:scale(1.2);
+    color: #F0A500;
 }
 
 .facebook{
@@ -461,6 +486,11 @@ a{
 .comida__alt{
     width: 225px;
     height: 225px;
+    transition:all .5s ease-in-out;
+}
+.comida__alt:hover{
+    -webkit-transform:scale(1.3);
+    transform:scale(1.2);
 }
 
 .nombre{
@@ -472,7 +502,7 @@ a{
 .menu--contacto{
     width: 780px;
     background-color: #333;
-    border: dashed #dd8855;
+    border: dashed #F0A500;
     border-width: 8px;
     margin-left: auto;
     margin-right: auto;
@@ -628,6 +658,7 @@ a{
     .comida__nombre{
         font-size: 25px;
     }
+
     .comida__descripcion{
         font-size: 15px;
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -640,7 +671,6 @@ a{
         width: 100px;
         height: 100px;
     }
-
 
 }
 
