--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -62,7 +62,7 @@ a{
 
 //Estilos globales
 .cuerpo{
-    background-image: url(../assets/fondo.jpg);
+    background-image: url("../assets/Images/fondo.png");
     display: grid;
 }
 
