--- a/sass/estilos.css
+++ b/sass/estilos.css
@@ -195,6 +195,8 @@
   text-align: center;
   margin-top: 25px;
   margin-bottom: 0px;
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
   grid-area: navegacion;
 }
 
@@ -296,6 +298,15 @@
   height: 225px;
 }
 
+.cuerpoLista {
+  background-image: url(../assets/Images/fondo.png);
+      grid-template-areas: "header" "navegacion" "locales";
+  -ms-grid-columns: 100%;
+      grid-template-columns: 100%;
+  -ms-grid-rows: (auto)[3];
+      grid-template-rows: repeat(3, auto);
+}
+
 .locales {
   width: 70%;
   height: auto;
@@ -313,6 +324,8 @@
       -ms-flex-align: center;
           align-items: center;
   margin-left: 15%;
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
   grid-area: locales;
 }
 
@@ -344,6 +357,10 @@
           animation-duration: 3s;
   -webkit-animation-name: slideout;
           animation-name: slideout;
+}
+
+.cuerpoReservar {
+  background-image: url(../assets/Images/fondo.png);
 }
 
 .menu--reservar {
@@ -393,6 +410,10 @@
   border-bottom: solid #E45826;
   font-family: anton;
   letter-spacing: 2px;
+}
+
+.cuerpoContacto {
+  background-image: url(../assets/Images/fondo.png);
 }
 
 .menu--contacto {
@@ -558,8 +579,8 @@ a {
   text-decoration: none;
 }
 
-.cuerpo, .cuerpoIndex, .cuerpoLocal {
-  background-image: url(../assets/fondo.jpg);
+.cuerpo, .cuerpoIndex, .cuerpoLocal, .cuerpoLista {
+  background-image: url("../assets/Images/fondo.png");
   display: -ms-grid;
   display: grid;
 }
