--- a/sass/_lista.scss
+++ b/sass/_lista.scss
@@ -95,3 +95,9 @@ $paleta_terciaria: (
     animation-duration: 3s;
     animation-name: movimiento;
 }
+
+.sombras{
+    -webkit-box-shadow: 0px 11px 41px 3px rgba(0,0,0,0.74);
+    -moz-box-shadow: 0px 11px 41px 3px rgba(0,0,0,0.74);
+    box-shadow: 0px 11px 41px 3px rgba(0,0,0,0.74);
+}
