--- a/sass/_local.scss
+++ b/sass/_local.scss
@@ -202,12 +202,11 @@ $paleta_terciaria: (
 
 .facebook{
     float: right;
-    width: 112px;
-    height: 112px;
-    margin-top: 115px;
+    width: auto;
+    height: 150px;
 }
 
 .mapa{
-    width: 300px;
-    height: 225px;
+    width: auto;
+    height: 150px;
 }
