--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -113,6 +113,7 @@ a{
 }
 
 .piedepagina{
+    margin-top: 50px;
     grid-area: piedepagina;
     display: flex;
     justify-content: space-around;
@@ -285,6 +286,11 @@ a{
         .comida{
             padding-left: 0px;
         }
+
+        .comida__imagen{
+            pointer-events: none;
+        }
+
         .mapa{
             width: 100px;
             height: 100px;
@@ -297,6 +303,8 @@ a{
         }
         .facebook{
             margin-top: 0px;
+            width: auto;
+            height: 70px;
         }
 
             /*Reservar responsive*/
